# skepticbot

./: buttons_app.py  create_watson_session.py  handle_llm.py  handle_rule_based.py  pyproject.toml  run.py  skill-SkepticV22.json  skill-Skepticbot-Voice.json  streamlit_app.py
