[tool.poetry]
name = "skepticbot"
version = "0.1.0"
description = ""
authors = ["Jackson Karel <jackson.karel2@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
openai = "^1.16.2"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
