[tool.poetry]
name = "skepticbot"
version = "0.1.0"
description = ""
authors = ["Jackson Karel <jackson.karel2@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
openai = "^1.16.2"
streamlit = "1.29.0"
ibm-watson = "^8.0.0"
python-dotenv = "^1.0.1"
streamlit-feedback = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
